--- a/pizza_project/admin_api/jinja2/about_user/admin_about_user.html
+++ b/pizza_project/admin_api/jinja2/about_user/admin_about_user.html
@@ -5,7 +5,7 @@
 
 <p> New Messages {{count_new_message}} <a href="/main/user/message/{{ user.id }}/"> Messeger </a><br></p>  
 <p> New Orders {{count_new_orders}} <a href="/main/user/all_orders/{{user.id}}/"> All Orders In Work </a> *** <a href="/main/user/all_orders_archive/{{user.id}}/"> Archive Orders </a> <br> </p>
-<p> Total sales {{price}} BYN <br></p>
+<p> Total sales {{user.total_shopping}} BYN <br></p>
 *****************************************************************************************************
 <br>
 User Information
