--- a/pizza_project/admin_api/jinja2/main_admin.html
+++ b/pizza_project/admin_api/jinja2/main_admin.html
@@ -10,7 +10,7 @@
             Pizza Lisa ADMIN
         </div>
         <div>
-            <a href="/pizza/lisa/"> *** To Users Page  </a> 
+            <a href="/pizza/sign_in/logout/">LogOut</a> 
         </div>
         {% block content %}
         {% endblock %}
