--- a/pizza_project/admin_api/jinja2/catalog/catalog_admin_all.html
+++ b/pizza_project/admin_api/jinja2/catalog/catalog_admin_all.html
@@ -16,7 +16,7 @@
         Create New Pizza
     <form action="/main/catalog/" method="post">
         {{ form }}
-        <button type="submit">Sent</button>
+        <button type="submit">Create</button>
     </form> 
 *****************************************************************************************************
     <br>
