--- a/pizza_project/admin_api/jinja2/orders/catalog.html
+++ b/pizza_project/admin_api/jinja2/orders/catalog.html
@@ -1,16 +1,7 @@
-{% extends 'main/main_after_auth.html' %}
+{% extends 'main_admin.html' %}
 
 {% block content %}
-    {% for pizza_discont in catalog_discont %}
-    <li> 
-        <p> <a href="/pizza/lisa/{{ pizza_discont.id }}/"> *** {{ pizza_discont.name_pizza }}</a> - % Sale % - Price With Discont {{ pizza_discont.price_disсont }} BYN </p> 
-            <form action="/pizza/lisa/basket/{{ pizza_discont.id }}/" method="post">
-                <button type="submit">Add to Basket</button> 
-            </form>    
-            <br>   
-        </p>
-        </li>
-    {% endfor %} 
+
     {% for pizza in catalog %}
     <li> 
         <p> <a href="/pizza/lisa/{{ pizza.id }}/"> *** {{ pizza.name_pizza }}  </a> - Price {{pizza.price}} BYN </p> 
