--- a/pizza_project/pizza_lisa/jinja2/order/one_order_const.html
+++ b/pizza_project/pizza_lisa/jinja2/order/one_order_const.html
@@ -10,10 +10,10 @@
         <p> Name - {{ pizza.name }} </p>
         <p> Phone - {{ pizza.phone }} </p>
         <p> Address - {{ pizza.address }} </p>
-        <p> Order: {{pizza.all_price}} BYN </p>
+        <p> Total: {{pizza.all_price}} BYN </p>
         {% for m in count_pizza %}
         <li>
-            {{ pizza.one_pizza_in_order[m]['pizza'] }} --- Count {{ pizza.one_pizza_in_order[m]['count'] }} -- Price {{ pizza.one_pizza_in_order[m]['price_one'] * pizza.one_pizza_in_order[m]['count'] }}
+            {{ pizza.one_pizza_in_order[m]['pizza'] }} --- Count {{ pizza.one_pizza_in_order[m]['count'] }}
         </li>
         {% endfor %}    
     </li>
