--- a/pizza_project/pizza_lisa/jinja2/order/order.html
+++ b/pizza_project/pizza_lisa/jinja2/order/order.html
@@ -7,7 +7,8 @@
 </p> 
 
 <p> 
-    Your order number {{order_pizza.id}}
+    Your order number {{order_pizza.id}}<br>
+    Total Cost {{order_pizza.total_money}}
     {% for p in pizza %}
     <li> Name pizza : {{p.pizza}} --- Count : {{p.count}} --- Price: {{p.count * p.price_one}}
     </li>
