--- a/pizza_project/admin_api/jinja2/orders/catalog.html
+++ b/pizza_project/admin_api/jinja2/orders/catalog.html
@@ -4,7 +4,7 @@
 
     {% for pizza in catalog %}
     <li> 
-        <p> <a href="/pizza/lisa/{{ pizza.id }}/"> *** {{ pizza.name_pizza }}  </a> - Price {{pizza.price}} BYN </p> 
+        <p> <a href="/pizza/lisa/{{ pizza.id }}/"> *** {{ pizza.name_pizza }}  </a> - Price {{(pizza.price|float|round(2))}} BYN </p> 
             <form action="/pizza/lisa/basket/{{ pizza.id }}/" method="post">
                 <button type="submit">Add to Basket</button> 
             </form>  
