--- a/pizza_project/admin_api/jinja2/main_admin.html
+++ b/pizza_project/admin_api/jinja2/main_admin.html
@@ -16,6 +16,7 @@
         {% endblock %}
         <div>
             <br>
+            <p> <a href="/main/"> To Main Page </a><br>
         </div>
         <div>
                 Working time: 9:00-21:00 every day
