--- a/pizza_project/pizza_lisa/jinja2/basket/basket_with_discont.html
+++ b/pizza_project/pizza_lisa/jinja2/basket/basket_with_discont.html
@@ -4,14 +4,14 @@
 <p> Please, check your Order </p>
 <br>
 {% for m in keys %}
-<li> <p> {{basket_with_price[m].pizza}} - {{basket_with_price[m].count}} pieces Price: By one {{basket_with_price[m].price_one}} BYN -- Total: {{basket_with_price[m].price}} BYN
+<li> <p> {{basket_with_price[m].pizza}} - {{basket_with_price[m].count}} pieces Price: By one {{(basket_with_price[m].price_one|float|round(2))}} BYN -- Total: {{(basket_with_price[m].price|float|round(2))}} BYN
     <a href="/pizza/lisa/basket/add/{{ basket_with_price[m].id }}/"> Add </a><a href="/pizza/lisa/basket/delete/{{ basket_with_price[m].id }}/"> Delete </a> </p> 
 </li>
 {% endfor %} 
 <br>
-<p>Cost without Discont: {{price_without_discont}} BYN</p>
-<p>Discont: - {{discont}} BYN</p>
-<p>Total Cost: {{all_price}} BYN</p>
+<p>Cost without Discont: {{(price_without_discont|float|round(2))}} BYN</p>
+<p>Discont: - {{(discont|float|round(2))}} BYN</p>
+<p>Total Cost: {{(all_price|float|round(2))}} BYN</p>
 
 <br>
     <form action="/pizza/lisa/order/" method="post">
