Pizza Lisa Final

--- a/pizza_project/admin_api/jinja2/catalog/catalog_admin_all.html
+++ b/pizza_project/admin_api/jinja2/catalog/catalog_admin_all.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <p> Catalog All For Admin </p>
-    Total Pizza - {{(count_pizza|float|round(2))}}</p>
+    Total Pizza - {{(count_pizza)}}</p>
     <br>
         
     <p> Pizza: </p>
